<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_height="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:clickable="true"

        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/line_schedule" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="3"
                android:text="@string/card_kehadiran_praktikum"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/card_teks_size_presence" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/h"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/card_teks_size_presence" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/th"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/card_teks_size_presence" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/card_teks_size_presence" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/percent"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/card_teks_size_presence" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>