<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtclose"
            android:layout_margin="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/x"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/circle_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_top_object_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/verifikasi_telepon"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/waktu_verifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/waktu"
                android:textColor="@color/colorRed"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/kode"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/btn_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_verification_background"
                android:elevation="0dp"
                android:text="@string/verifikasi"
                android:textColor="@color/colorPrimary" />

            <ProgressBar
                android:id="@+id/progressBar_verification"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_verification_background"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/btn_resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                android:text="@string/kirim_ulang_kode"
                android:textColor="@color/colorPrimary" />

            <ProgressBar
                android:id="@+id/progressBar_resend_code"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:indeterminateTint="@color/colorAccent"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>