<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresenceKuliahFragment">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/line_schedule_background"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="6dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/h"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/card_teks_size_presence"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/th"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/card_teks_size_presence"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/p"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/card_teks_size_presence"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/percent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/card_teks_size_presence"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="120dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_presence_school"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        tools:listitem="@layout/item_row_presence_school"/>

</androidx.constraintlayout.widget.ConstraintLayout>