<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_spp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/bg_circle_blue_solid">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/semester"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/tv_count_semester"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12"
                        android:includeFontPadding="false"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/line_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp"
                    android:gravity="center">

                    <TextView
                        android:layout_margin="@dimen/margin_text_in_item"
                        android:id="@+id/tv_name_tahun_semester"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_title_toolbar"
                        android:text="@string/_2016_ganjil"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/padding_drawable_with_text_in_item"
                        android:drawableStart="@drawable/ic_semester_24dp"/>

                    <TextView
                        android:layout_margin="@dimen/margin_text_in_item"
                        android:id="@+id/tv_sks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sks"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/padding_drawable_with_text_in_item"
                        android:drawableStart="@drawable/ic_sks_blue_24dp"/>

                    <TextView
                        android:layout_margin="@dimen/margin_text_in_item"
                        android:id="@+id/tv_ips"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ips"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/padding_drawable_with_text_in_item"
                        android:drawableStart="@drawable/ic_assessment_blue_24dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_green_30dp"/>

                    <TextView
                        android:id="@+id/tv_status"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/line_horizontal"
        android:scaleType="fitXY"/>

</LinearLayout>